# qfy_manipulator_repo

./: .gitignore
qfy_dynamixel/: .pydevproject  CMakeLists.txt  README.md  package.xml
qfy_dynamixel/config/: joint_123.yaml  joint_456.yaml  joint_multi.yaml  joint_multi_trajectory_controller.yaml  pan.yaml  tilt.yaml  tilt_mx.yaml  tilt_mx28.yaml
qfy_dynamixel/launch/: apritag_test.launch  joint23_move.launch  local_mx_ax.launch  move_123.launch  move_456.launch  move_ax.launch  move_grasp.launch  move_mx.launch  move_mx28.launch  move_mx28.launch~  move_mx64_mx106.launch  move_singularity.launch  move_test.launch  move_total.launch  move_vs.launch  start_multi_meta_controller.launch~  start_pan_controlller.launch  start_tilt_controller.launch  test_camera.launch  test_mx.launch  test_sc.launch  test_service_client.launch  test_tf2_ros.launch
qfy_dynamixel/msg/: IbvsErrorStamped.msg  Imagepoint.msg  PbvsErrorStamped.msg  multi_joint_point.msg
qfy_dynamixel/scripts/: ax_position_speed.py  joint3_continue.py  multi_joint_trj_ax.py  multi_joint_trj_class.py  multi_joint_trj_mx.py  mx_continue.py  mx_position_speed.py  origin_multi_joint_trj_class.py  origin_pub_joint.py  pub_joint.py  pub_joint.py~  qfy_joint_trajectory.py  tf_test.py  tf_test_pub.py  time_duration.py  trajectory_ax_client.py  trajectory_class.py  trajectory_client.py  trajectory_mx_client.py  trajectory_sub_client.py  vs_interplation.py
qfy_dynamixel/scripts/plot/: data_pro.py
qfy_dynamixel/scripts/safe/: emergency.py
qfy_dynamixel/scripts/servo/: LowPassFilterQFY.py  check_joint_trj.py  hybrid_vs_control.py  ibvs_node.py  kinematic.py  kinematic_2.py  pbvs_node.py  srv_test.py  test_hybrid.py  track.py  track.py~  track_2.py  track_client.py  uav_vs.py  visual_servo.py
qfy_dynamixel/scripts/test/: joint2_continue.py  kinematic_2.py  new_pub.py  time_duration.py  trajectory.py
qfy_dynamixel/src/: keyboard.cpp  test1_client.cpp  test1_service.cpp
qfy_dynamixel/srv/: BeginGrasp.srv  MoveUAV.srv
qfy_dynamixel_control/: CMakeLists.txt  package.xml
qfy_dynamixel_control/config/: manipulator_control.yaml
qfy_dynamixel_control/launch/: manipulator_control.launch
qfy_dynamixel_description/: CMakeLists.txt  README.md  package.xml
qfy_dynamixel_description/battery/: manifest.xml
qfy_dynamixel_description/battery/launch/: gazebo.launch
qfy_dynamixel_description/battery/meshes/: battery.stl
qfy_dynamixel_description/battery/urdf/: battery.urdf
qfy_dynamixel_description/battery/xacro/: battery.xacro
qfy_dynamixel_description/final_backup19/: manifest.xml
qfy_dynamixel_description/final_backup19/launch/: display.launch  gazebo.launch
qfy_dynamixel_description/manipulator/: manifest.xml
qfy_dynamixel_description/manipulator/meshes/: finger1.stl  (+9 more)
qfy_dynamixel_description/support/: manifest.xml
qfy_dynamixel_description/urdf/: hummingbird.xacro  hummingbird_base.xacro  multirotor_base.xacro  qfy_airial_manipulator.gazebo
qfy_dynamixel_gazebo/: CMakeLists.txt  README.md  package.xml
qfy_dynamixel_gazebo/launch/: airial_manipulator.launch
qfy_dynamixel_gazebo/resource/: octo_hummingbird.yaml
qfy_dynamixel_gazebo/scripts/: gazebo_trj.py
qfy_visual_tracker/: CMakeLists.txt  package.xml
qfy_visual_tracker/launch/: pbvs.launch
(+45 files in other folders)
